sma working ambigute

--- a/TimeSeries/TestCode.ipynb
+++ b/TimeSeries/TestCode.ipynb
@@ -55,14 +55,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        0\n",
+      "      0\n",
+      "0    35\n",
+      "1    32\n",
+      "2    30\n",
+      "3    31\n",
+      "4    44\n",
+      "..   ..\n",
+      "360  37\n",
+      "361  52\n",
+      "362  48\n",
+      "363  55\n",
+      "364  50\n",
+      "\n",
+      "[365 rows x 1 columns]         0\n",
       "0    32.0\n",
       "1    30.0\n",
       "2    31.0\n",
@@ -82,7 +95,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lan-27600\\AppData\\Local\\Temp\\ipykernel_15380\\3761687799.py:5: FutureWarning: The squeeze argument has been deprecated and will be removed in a future version. Append .squeeze(\"columns\") to the call to squeeze.\n",
+      "C:\\Users\\lan-27600\\AppData\\Local\\Temp\\ipykernel_15380\\192619164.py:5: FutureWarning: The squeeze argument has been deprecated and will be removed in a future version. Append .squeeze(\"columns\") to the call to squeeze.\n",
       "\n",
       "\n",
       "  series = read_csv('daily-total-female-births.csv', header=0, index_col=0, parse_dates=True, squeeze= True)\n"
@@ -94,7 +107,7 @@
        "\"\\ndataframe = concat([temps.shift(1), temps], axis=1)\\nprint(dataframe)\\ndataframe.columns = ['t-1', 't']\\n#print(dataframe.head(5))\\n\""
       ]
      },
-     "execution_count": 80,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
