add 5 minute superviser Dataframe dfd

--- a/TestCode.ipynb
+++ b/TestCode.ipynb
@@ -131,7 +131,347 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def extractDataBetween (ticker_symbol,startDatetime,endDatetime,interv):\n",
+    "    \"\"\"\n",
+    "    A function For extract prices between a specific Time\n",
+    "    startDatetime,endDatetime = data.index[2],data.index[3] \n",
+    "    print(startDatetime,endDatetime)\n",
+    "    2024-02-01 02:00:00 2024-02-01 03:00:00\n",
+    "    \"\"\"\n",
+    "\n",
+    "    print(startDatetime,endDatetime)\n",
+    "    start_sp_date = pd.to_datetime(startDatetime)\n",
+    "    end_sp_date = pd.to_datetime(endDatetime)\n",
+    "    dfd = yf.download(ticker_symbol, start=start_sp_date, end=end_sp_date, interval=interv)\n",
+    "    return dfd\n",
+    "\n",
+    "\n",
+    "dfd = extractDataBetween(ticker_symbol='ADA-USD', startDatetime=startDatetime, endDatetime=endDatetime, interv=\"15m\")\n",
+    "print(dfd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "                               Open      High       Low     Close  Adj Close  \\\n",
+      "Datetime                                                                       \n",
+      "2024-03-10 00:00:00+00:00  0.743735  0.744211  0.739468  0.740585   0.740585   \n",
+      "2024-03-10 01:00:00+00:00  0.740503  0.742249  0.739188  0.741050   0.741050   \n",
+      "2024-03-10 02:00:00+00:00  0.740964  0.741155  0.739383  0.739383   0.739383   \n",
+      "2024-03-10 03:00:00+00:00  0.739360  0.739378  0.736165  0.736287   0.736287   \n",
+      "2024-03-10 04:00:00+00:00  0.736282  0.739122  0.736282  0.737082   0.737082   \n",
+      "...                             ...       ...       ...       ...        ...   \n",
+      "2024-03-14 17:00:00+00:00  0.758095  0.758095  0.751939  0.753307   0.753307   \n",
+      "2024-03-14 18:00:00+00:00  0.753471  0.753471  0.737229  0.737901   0.737901   \n",
+      "2024-03-14 19:00:00+00:00  0.737608  0.737608  0.719645  0.728004   0.728004   \n",
+      "2024-03-14 20:00:00+00:00  0.728370  0.743620  0.728370  0.742687   0.742687   \n",
+      "2024-03-14 21:00:00+00:00  0.742373  0.743536  0.738771  0.743536   0.743536   \n",
+      "\n",
+      "                             Volume  \n",
+      "Datetime                             \n",
+      "2024-03-10 00:00:00+00:00         0  \n",
+      "2024-03-10 01:00:00+00:00   3385472  \n",
+      "2024-03-10 02:00:00+00:00         0  \n",
+      "2024-03-10 03:00:00+00:00    123776  \n",
+      "2024-03-10 04:00:00+00:00   3796800  \n",
+      "...                             ...  \n",
+      "2024-03-14 17:00:00+00:00  19155072  \n",
+      "2024-03-14 18:00:00+00:00  25879680  \n",
+      "2024-03-14 19:00:00+00:00  70567808  \n",
+      "2024-03-14 20:00:00+00:00  54419200  \n",
+      "2024-03-14 21:00:00+00:00   8828544  \n",
+      "\n",
+      "[118 rows x 6 columns]                                Open      High       Low     Close  Adj Close  \\\n",
+      "Datetime                                                                       \n",
+      "2024-03-10 00:00:00+00:00  0.743735  0.743735  0.742812  0.742812   0.742812   \n",
+      "2024-03-10 00:05:00+00:00  0.742742  0.742742  0.742287  0.742287   0.742287   \n",
+      "2024-03-10 00:10:00+00:00  0.742465  0.742465  0.742237  0.742237   0.742237   \n",
+      "2024-03-10 00:15:00+00:00  0.742177  0.742716  0.741929  0.742716   0.742716   \n",
+      "2024-03-10 00:20:00+00:00  0.742860  0.744211  0.742860  0.744211   0.744211   \n",
+      "...                             ...       ...       ...       ...        ...   \n",
+      "2024-03-14 21:15:00+00:00  0.742843  0.742843  0.742843  0.742843   0.742843   \n",
+      "2024-03-14 21:25:00+00:00  0.741651  0.741651  0.741651  0.741651   0.741651   \n",
+      "2024-03-14 21:30:00+00:00  0.741674  0.741674  0.741674  0.741674   0.741674   \n",
+      "2024-03-14 21:40:00+00:00  0.742889  0.742889  0.742889  0.742889   0.742889   \n",
+      "2024-03-14 21:50:00+00:00  0.743536  0.743536  0.743536  0.743536   0.743536   \n",
+      "\n",
+      "                            Volume  \n",
+      "Datetime                            \n",
+      "2024-03-10 00:00:00+00:00        0  \n",
+      "2024-03-10 00:05:00+00:00   874816  \n",
+      "2024-03-10 00:10:00+00:00   266048  \n",
+      "2024-03-10 00:15:00+00:00        0  \n",
+      "2024-03-10 00:20:00+00:00  2416896  \n",
+      "...                            ...  \n",
+      "2024-03-14 21:15:00+00:00  3162624  \n",
+      "2024-03-14 21:25:00+00:00  3640064  \n",
+      "2024-03-14 21:30:00+00:00   484992  \n",
+      "2024-03-14 21:40:00+00:00        0  \n",
+      "2024-03-14 21:50:00+00:00  1540864  \n",
+      "\n",
+      "[1364 rows x 6 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "\n",
+    "ticker_symbol = \"ada-usd\"\n",
+    "start_sp_date = \"2024-03-10\"\n",
+    "end_sp_date   = \"2024-12-29\"\n",
+    "interv        = \"5m\"\n",
+    "\n",
+    "df  = yf.download(ticker_symbol, start=start_sp_date, end=end_sp_date, interval=\"1h\")\n",
+    "dfd = yf.download(ticker_symbol, start=start_sp_date, end=end_sp_date, interval=\"5m\")\n",
+    "print(df, dfd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-03-10 01:00:00+00:00 2024-03-10 02:00:00+00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.index[1], df.index[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2024-03-10 01:00:00+00:00</th>\n",
+       "      <td>0.740503</td>\n",
+       "      <td>0.742058</td>\n",
+       "      <td>0.740503</td>\n",
+       "      <td>0.742058</td>\n",
+       "      <td>0.742058</td>\n",
+       "      <td>695168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-10 01:05:00+00:00</th>\n",
+       "      <td>0.742031</td>\n",
+       "      <td>0.742031</td>\n",
+       "      <td>0.740877</td>\n",
+       "      <td>0.740877</td>\n",
+       "      <td>0.740877</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-10 01:10:00+00:00</th>\n",
+       "      <td>0.740523</td>\n",
+       "      <td>0.740523</td>\n",
+       "      <td>0.739966</td>\n",
+       "      <td>0.740108</td>\n",
+       "      <td>0.740108</td>\n",
+       "      <td>735744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-10 01:15:00+00:00</th>\n",
+       "      <td>0.740139</td>\n",
+       "      <td>0.740828</td>\n",
+       "      <td>0.740118</td>\n",
+       "      <td>0.740118</td>\n",
+       "      <td>0.740118</td>\n",
+       "      <td>916800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-10 01:20:00+00:00</th>\n",
+       "      <td>0.740082</td>\n",
+       "      <td>0.740082</td>\n",
+       "      <td>0.739531</td>\n",
+       "      <td>0.739725</td>\n",
+       "      <td>0.739725</td>\n",
+       "      <td>814464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-10 01:25:00+00:00</th>\n",
+       "      <td>0.740824</td>\n",
+       "      <td>0.742249</td>\n",
+       "      <td>0.740824</td>\n",
+       "      <td>0.742135</td>\n",
+       "      <td>0.742135</td>\n",
+       "      <td>1072384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-10 01:30:00+00:00</th>\n",
+       "      <td>0.741842</td>\n",
+       "      <td>0.741842</td>\n",
+       "      <td>0.739967</td>\n",
+       "      <td>0.739967</td>\n",
+       "      <td>0.739967</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-10 01:35:00+00:00</th>\n",
+       "      <td>0.739928</td>\n",
+       "      <td>0.741117</td>\n",
+       "      <td>0.739928</td>\n",
+       "      <td>0.741069</td>\n",
+       "      <td>0.741069</td>\n",
+       "      <td>105920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-10 01:40:00+00:00</th>\n",
+       "      <td>0.740988</td>\n",
+       "      <td>0.740988</td>\n",
+       "      <td>0.739188</td>\n",
+       "      <td>0.739188</td>\n",
+       "      <td>0.739188</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-10 01:45:00+00:00</th>\n",
+       "      <td>0.739210</td>\n",
+       "      <td>0.740860</td>\n",
+       "      <td>0.739210</td>\n",
+       "      <td>0.740860</td>\n",
+       "      <td>0.740860</td>\n",
+       "      <td>636416</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-10 01:50:00+00:00</th>\n",
+       "      <td>0.740945</td>\n",
+       "      <td>0.741515</td>\n",
+       "      <td>0.740945</td>\n",
+       "      <td>0.741515</td>\n",
+       "      <td>0.741515</td>\n",
+       "      <td>576640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-10 01:55:00+00:00</th>\n",
+       "      <td>0.741790</td>\n",
+       "      <td>0.741793</td>\n",
+       "      <td>0.741050</td>\n",
+       "      <td>0.741050</td>\n",
+       "      <td>0.741050</td>\n",
+       "      <td>306304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-10 02:00:00+00:00</th>\n",
+       "      <td>0.740964</td>\n",
+       "      <td>0.740964</td>\n",
+       "      <td>0.740360</td>\n",
+       "      <td>0.740360</td>\n",
+       "      <td>0.740360</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Open      High       Low     Close  Adj Close  \\\n",
+       "Datetime                                                                       \n",
+       "2024-03-10 01:00:00+00:00  0.740503  0.742058  0.740503  0.742058   0.742058   \n",
+       "2024-03-10 01:05:00+00:00  0.742031  0.742031  0.740877  0.740877   0.740877   \n",
+       "2024-03-10 01:10:00+00:00  0.740523  0.740523  0.739966  0.740108   0.740108   \n",
+       "2024-03-10 01:15:00+00:00  0.740139  0.740828  0.740118  0.740118   0.740118   \n",
+       "2024-03-10 01:20:00+00:00  0.740082  0.740082  0.739531  0.739725   0.739725   \n",
+       "2024-03-10 01:25:00+00:00  0.740824  0.742249  0.740824  0.742135   0.742135   \n",
+       "2024-03-10 01:30:00+00:00  0.741842  0.741842  0.739967  0.739967   0.739967   \n",
+       "2024-03-10 01:35:00+00:00  0.739928  0.741117  0.739928  0.741069   0.741069   \n",
+       "2024-03-10 01:40:00+00:00  0.740988  0.740988  0.739188  0.739188   0.739188   \n",
+       "2024-03-10 01:45:00+00:00  0.739210  0.740860  0.739210  0.740860   0.740860   \n",
+       "2024-03-10 01:50:00+00:00  0.740945  0.741515  0.740945  0.741515   0.741515   \n",
+       "2024-03-10 01:55:00+00:00  0.741790  0.741793  0.741050  0.741050   0.741050   \n",
+       "2024-03-10 02:00:00+00:00  0.740964  0.740964  0.740360  0.740360   0.740360   \n",
+       "\n",
+       "                            Volume  \n",
+       "Datetime                            \n",
+       "2024-03-10 01:00:00+00:00   695168  \n",
+       "2024-03-10 01:05:00+00:00        0  \n",
+       "2024-03-10 01:10:00+00:00   735744  \n",
+       "2024-03-10 01:15:00+00:00   916800  \n",
+       "2024-03-10 01:20:00+00:00   814464  \n",
+       "2024-03-10 01:25:00+00:00  1072384  \n",
+       "2024-03-10 01:30:00+00:00        0  \n",
+       "2024-03-10 01:35:00+00:00   105920  \n",
+       "2024-03-10 01:40:00+00:00        0  \n",
+       "2024-03-10 01:45:00+00:00   636416  \n",
+       "2024-03-10 01:50:00+00:00   576640  \n",
+       "2024-03-10 01:55:00+00:00   306304  \n",
+       "2024-03-10 02:00:00+00:00        0  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st = df.index[1]\n",
+    "en = df.index[2]\n",
+    "dfd.loc[st:en]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extractDataBetween1(dataFrame, startDatetime, endDatetime, interv) :\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -150,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
